--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,5 +2,96 @@
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
-    color: black; 
+    color: #ffffff;
+}
+.header h1 {
+    display: inline-block;
+    font-size: 48px;
+}
+
+.header h1 .seo {
+    color: #d9dcd6;
+}
+
+.header div {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
+.header div ul {
+    list-style-type: none;
+}
+
+.header div ul li {
+    display: inline-block;
+    margin-left: 25px;
+}
+
+
+
+#about{
+    border: solid 1px white;
+}
+#projects{
+    border: solid 1px red;
+}
+#contact{
+    border:solid 1px green;
+}
+.wrap{
+    margin: 1em;
+    padding: 10em;
+}
+
+.wrap p {
+    font-size:1.5em;
+}
+
+.project-list{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.tile{
+    padding: 1em;
+    border-radius: 10px;
+    font-size: 1.5em;
+}
+.tile:hover{
+    opacity: .5;
+    cursor: pointer;
+}
+.small-section{
+    display: flex; 
+    justify-content: space-between;
+}
+.large{
+    padding: 2em;
+    height: 15em;
+    background-color: teal;
+    width: 100%;
+
+}
+
+.small{
+    background-color: green;
+    width: 45%;
+    height: 7em;
+}
+
+#first-project{
+    background-image: url('./assets/chicken.jpeg');
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: cover;
+}
+#second-project{
+    background-image: url('./assets/forest.jpeg');
+}
+
+#third-project{
+    background-image: url('./assets/skyline.jpeg');
 }
